# lvca

./: .gitignore  .ocamlformat  HACKING.md  LICENSE  Makefile  README.md  bsconfig.json  checking-debugger.html  debugger.html  document-render.html  dune-project  index.html  lvca.opam  package.json  server.py  svg-render.html  term-render.html  webpack.config.js
__tests__/: Bidirectional_test.bs.js  Bidirectional_test.ml  Bitstring_test.bs.js  Bitstring_test.ml  ConcreteSyntaxParser_test.bs.js  ConcreteSyntaxParser_test.ml  ConcreteSyntax_test.bs.js  ConcreteSyntax_test.ml  Core_test.bs.js  Core_test.ml  DynamicsParser_test.bs.js  DynamicsParser_test.ml  LalrParsing_test.ml  LanguageParser_test.bs.js  LanguageParser_test.ml  Languages_test.ml  Lex_test.bs.js  Lex_test.ml  Lr1Parsing_test.ml  LrParsing_test.bs.js  LrParsing_test.ml  RegexParser_test.ml  Regex_test.ml  TermParser_test.bs.js  TermParser_test.ml  TestUtil.ml  types_test.bs.js  types_test.ml  types_test.re
bidirectional/: Bidirectional.ml  Bidirectional.mli  Statics.ml  Statics.mli  Statics_test.ml  dune
bonsai-test/: dune  main.ml  term_render.ml
constructive-real/: ConstructiveReal.ml  ConstructiveReal.mli  Constructive_real.ml  LICENSE  dune
core/: Core.ml  Core.mli  Core_test.ml  Lvca_core.ml  Lvca_core.mli  dune
crowbar/: dune  main.ml
del/: Binding_aware_pattern_model.ml  Binding_aware_pattern_model.mli  Core.ml  Core.mli  Empty.ml  Empty.mli  List_model.ml  List_model.mli  Lvca_core.ml  Option_model.ml  Option_model.mli  Pattern_model.ml  Pattern_model.mli  Sort_model.ml  Sort_model.mli  dune
experimental/: DeBruijn.ml  DeBruijn.mli  DeBruijn_2d.ml  Matching.ml  Matching.mli  Regex.ml
input/: input
js_api/: Main.ml  dune
languages/: Calculator.ml  Document.ml  Edits.ml  Eff.ml  HuttonsRazor.ml  Huttons_razor.ml  dune  (+22 more)
pages/: Ast_operations.ml  Bidirectional_debugger.ml  Calculator.ml  CheckTerm.ml  Check_term.ml  Code_review.ml  Codemirror.ml  Common.ml  Common.mli  Components.ml  DigitsEntry.ml  Digits_entry.ml  Edits.ml  EvalWithProvenance.ml  Eval_with_provenance.ml  Ide.ml  Katex.ml  ListNat.ml  List_nat.ml  Md_viewer.ml  MultilineInput.ml  MultilineInput.mli  Multiline_input.ml  Multiline_input.mli  Parser.ml  Pcf.ml  Pool.ml  Pool.mli  Prelude.ml  RangeFormatter.ml  Range_formatter.ml  Repl.ml  ScopeViewer.ml  Scope_viewer.ml  SignalPool.ml  SignalPool.mli  SingleLineInput.ml  SingleLineInput.mli  Single_line_input.ml  Stateless_view.ml  (+26 more)
pages/01-term-and-concrete/: dune  index.html  main.ml
pages/02-term-to-tex/: dune  index.html  katex.ml  main.ml  tex.ml
pages/0x-bidirectional-debugger/: dune  index.html  main.ml
pages/0x-core-eval/: main.ml
pages/0x-diagram-render/: dune  index.html  main.ml
pages/0x-document-render/: dune  main.ml
pages/0x-eval-with-provenance/: dune  index.html  main.ml
pages/0x-huttons-razor/: Expr_concrete.ml  index.html  main.ml
pages/md/: abstract-syntax.md  are-constructors-functions.md  bidirectional-typechecking.md  binding-aware-patterns.md  binding-viewer.md  checking-terms-and-patterns.md  church-and-curry.md  comments-are-metadata.md  concrete-syntax.md  constructive-real-calculator.md  diagram-language.md  finding-terms.md  garage-door.md  huttons-razor.md  introduction.md  lambda-concrete-and-abstract.md  make-code-review-easier.md  making-concrete-and-abstract.md  never-waste-a-refactor.md  parsing-language.md  progress-august-8-2020.md  progress-december-23-2020.md  progress-december-28-2020.md  progress-july-24-2020.md  progress-july-25-2021.md  progress-june-9-2021.md  progress-may-24-2021.md  progress-november-7-2020.md  progress-october-8-2020.md  progress-september-23-2020.md  semantic-diffs-and-broken-tests.md  semantic-diffs.md  software-evolution.md  sorts-and-kind-checking.md  the-interop-story.md  universes.md  what-is-a-pl.md  what-lvca-doesnt-do.md  why-is-lvca-interesting.md
pages/static/: hl-demo1.webm  hl-demo2.webm  treeview.webm
pages/style/: index.css
ppx_lvca/test/: .ocamlformat-ignore  dune  test.expected.ml  test.ml
src/: AbstractSyntax.ml  AbstractSyntax.mli  AbstractSyntaxEditor.re  AbstractSyntax_Lexer.ml  AbstractSyntax_Lexer.mll  AbstractSyntax_ParseErrors.ml  AbstractSyntax_Parser.messages  AbstractSyntax_Parser.ml  AbstractSyntax_Parser.mli  AbstractSyntax_Parser.mly  AbstractSyntax_Types.ml  Bidirectional.bs.js  Bidirectional.ml  Bidirectional.mli  Bidirectional_TestUtil.ml  Binding.bs.js  Binding.ml  Binding.mli  BindingAwarePattern.ml  Bitstring.bs.js  Bitstring.ml  Caml.ml  CheckTerm.ml  CheckTerm.mli  CheckingDebugger.re  CodeMirror.bs.js  CodeMirror.re  ConcreteSyntax.bs.js  ConcreteSyntax.ml  ConcreteSyntax.mli  ConcreteSyntaxDescription.ml  ConcreteSyntaxLexer.bs.js  ConcreteSyntaxLexer.mll  ConcreteSyntaxParseErrors.bs.js  ConcreteSyntaxParseErrors.ml  ConcreteSyntaxParser.bs.js  ConcreteSyntaxParser.messages  ConcreteSyntaxParser.mly  ConcreteSyntaxParser_test.ml  ConcreteSyntax_Lexer.ml  (+214 more)
tree-sitter/: Tree_sitter.ml  Tree_sitter.mli  Tree_sitter_gen.ml  dune
(+303 files in other folders)
