opam-version: "2.0"
version: "1.0"
synopsis: "Tools for creating programming languages"
maintainer: "joelburget@gmail.com"
authors: "Joel Burget"
license: "MIT"
homepage: "https://github.com/joelburget/lvca"
bug-reports: "https://github.com/joelburget/lvca/issues"
depends: [
  "ocaml" {>= "4.08.0"}
  "angstrom"
  "base"
  "zarith"
  "cbor"
  "digestif"
  "fmt"
  "ppx_jane"
  "ppx_inline_test"
  "dune" {>= "2.0.0"}
  "zarith_stubs_js"
  "uchar" {>= "0.0.2"}
  "ppxlib" {>= "0.22.0"}
  "ppx_optcomp" {>= "v0.14.1"}
  "omd"
  "crowbar"
  "brr"
  "note"
]
build: ["dune" "build" "-p" name "-j" jobs]
dev-repo: "git+https://github.com/joelburget/lvca.git"
