opam-version: "2.0"
version: "1.0"
synopsis: "Tools for creating programming languages"
maintainer: "joelburget@gmail.com"
authors: "Joel Burget"
license: "MIT"
homepage: "https://github.com/joelburget/lvca"
bug-reports: "https://github.com/joelburget/lvca/issues"
depends: [
  "angstrom"
  "base"
  "brr"
  "cbor"
  "crowbar"
  "digestif"
  "dune" {>= "2.0.0"}
  "fmt"
  "note"
  "ocaml" {>= "4.08.0"}
  "omd"
  "ppx_blob"
  "ppx_inline_test"
  "ppx_jane"
  "ppx_optcomp" {>= "v0.14.1"}
  "ppxlib" {>= "0.22.0"}
  "uchar" {>= "0.0.2"}
  "zarith"
  "zarith_stubs_js"
  "re" {>= "1.10.3"}
]
build: ["dune" "build" "-p" name "-j" jobs]
dev-repo: "git+https://github.com/joelburget/lvca.git"
