(library
 (public_name lvca)
 (inline_tests)
 (libraries digestif.ocaml base core_kernel cbor bignum re fmt)
 (preprocess
  (pps ppx_jane)))

(ocamllex
 (modules AbstractSyntax_Lexer Dynamics_Lexer Statics_Lexer Term_Lexer))

(menhir
 (modules AbstractSyntax_Parser Dynamics_Parser Statics_Parser Term_Parser)
 (flags :standard --table))
