(library
 (public_name lvca)
 (inline_tests)
 (libraries digestif.ocaml base cbor bignum re fmt)
 (preprocess
  (pps ppx_jane)))

(ocamllex
 (modules AbstractSyntax_Lexer Core_Lexer Statics_Lexer Term_Lexer))

(menhir
 (modules AbstractSyntax_Parser Core_Parser Statics_Parser Term_Parser)
 (flags :standard --table))
