(library
 (public_name lvca)
 (inline_tests)
 (libraries digestif.ocaml base cbor bignum fmt re angstrom)
 (preprocess
  (pps ppx_jane)))

(ocamllex
 (modules AbstractSyntax_Lexer Core_Lexer Statics_Lexer))

(menhir
 (modules AbstractSyntax_Parser Core_Parser Statics_Parser)
 (flags :standard --table))
