(executable
 (name pp)
 (modules pp)
 (preprocess ; this preprocess step isn't needed but it silences the dune warning ".merlin generated is inaccurate. Cannot mix preprocessed and non preprocessed specifications."
  (pps ppx_lvca))
 (libraries ppx_lvca ppxlib))

(rule
 (targets test.actual.ml)
 (deps
  (:pp pp.exe)
  (:input test.ml))
 (action
  (with-stdout-to
   test.actual.ml
   (run ./%{pp} --impl %{input} -o %{targets}))))

(rule
 (alias runtest)
 (action
  (diff test.expected.ml test.actual.ml)))

(test
 (name test)
 (modules test)
 (libraries lvca_syntax)
 (preprocess
  (pps ppx_lvca)))
